plugins {
	id 'java'
	id 'org.springframework.boot' version '2.5.6'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 17

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework:spring-aspects'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

bootRun {
	args = ['--add-opens java.base/java.lang=ALL-UNNAMED']
	jvmArgs += [ '-javaagent:' + projectDir + '/lib/spring-instrument-5.3.10.jar']
}

test {
	useJUnitPlatform()
	doFirst {
		jvmArgs += [ '-javaagent:' + projectDir + '/lib/spring-instrument-5.3.10.jar']
//		jvmArgs += ['-javaagent:'  + projectDir + '/lib/aspectjweaver-1.9.7.jar', '-javaagent:'  + projectDir + '/lib/spring-instrument-5.3.10.jar' ]
	}
}
